--- a/src/components/Ui/ChipButton/ChipButton.scss
+++ b/src/components/Ui/ChipButton/ChipButton.scss
@@ -1,9 +1,17 @@
+@import "../../../styles/helpers.scss";
+
 .chip_button {
+    display: flex;
     padding: 8px 16px;
     border-radius: 6px;
     font-size: 14px;
     color: var(--chip-button-text-color);
     background-color: var(--chip-button-background-color);
+
+    @include screen() {
+        padding: 6px 12px;
+        font-size: 12px;
+    }
 }
 
 .chip_button:hover {
