--- a/src/pages/Profile/Profile.scss
+++ b/src/pages/Profile/Profile.scss
@@ -44,6 +44,18 @@
                     max-height: 45px;
                     margin-left: auto;
                     width: auto;
+
+                    .chip_button{
+                        font-size: 12px;
+                        padding: 6px 12px;
+                    }
+
+                    .action_button{
+                        margin-left: auto;
+                        margin-top: 30px;
+                        padding: 8px 16px;
+                        font-size: 12px;
+                    }
                 }
 
                 &_elements {
